extra error handling, and a more resilient to errors evaluation